first demo blog

--- a/data/blog-demos/code-sample.mdx
+++ b/data/blog-demos/code-sample.mdx
@@ -1,7 +1,7 @@
 ---
-title: Road To Singularity
-date: '2024-09-30'
-tags: ['ai', 'singularity', 'future']
+title: Sample .md file
+date: '2016-03-08'
+tags: ['markdown', 'code', 'features']
 draft: false
 summary: Example of a markdown file with code blocks and syntax highlighting
 ---
